접힌 데이터 리스트